--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,8 @@
          -moz-background-clip: text;
          -moz-background-clip: text;
          -webkit-box-decoration-break: clone;
+         -webkit-text-fill-color: transparent;
+         background: -webkit-linear-gradient(to right, red 0%, #ef6eae 100%);
      }
 
      to {
@@ -73,6 +75,8 @@
          -moz-background-clip: text;
          -moz-background-clip: text;
          -webkit-box-decoration-break: clone;
+         -webkit-text-fill-color: transparent;
+         background: -webkit-linear-gradient(to right, red 0%, #ef6eae 100%);
      }
  }
 
@@ -86,6 +90,8 @@
          -moz-background-clip: text;
          -moz-background-clip: text;
          -webkit-box-decoration-break: clone;
+         -webkit-text-fill-color: transparent;
+         background: -webkit-linear-gradient(to right, red 0%, #ef6eae 100%);
      }
 
      to {
@@ -97,6 +103,8 @@
          -moz-background-clip: text;
          -moz-background-clip: text;
          -webkit-box-decoration-break: clone;
+         -webkit-text-fill-color: transparent;
+         background: -webkit-linear-gradient(to right, red 0%, #ef6eae 100%);
      }
  }
 
